--- a/app/res/layout/activity_password_determine.xml
+++ b/app/res/layout/activity_password_determine.xml
@@ -19,14 +19,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/street"
         android:inputType="textCapCharacters|number" />
 
     <TextView
         android:id="@+id/Aufforderung1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
+        android:layout_alignLeft="@+id/street"
         android:layout_below="@+id/editTextToken"
         android:layout_marginTop="15dp"
         android:text="@string/pin_create" />
@@ -53,7 +53,7 @@
         android:text="@string/pin_reenter" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/street"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
