--- a/app/res/layout/map_list_item.xml
+++ b/app/res/layout/map_list_item.xml
@@ -1,111 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/GridLayout01"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
     android:layout_marginTop="10dp"
-    android:columnCount="1"
+    android:columnCount="2"
     android:orientation="vertical"
     android:padding="5dp" >
 
     <TextView
         android:id="@+id/mapListTitle"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_gravity="left"
+        android:layout_marginTop="8dp"
         android:padding="2dp"
         android:text="@string/btn_anlaufstellen"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <TextView
-        android:id="@+id/mapListLabelAdress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:text="@string/label_adress" />
-
-    <TextView
-        android:id="@+id/mapListLabelPhone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginRight="15dp"
-        android:layout_row="5"
-        android:text="@string/label_phone" />
-
-    <TextView
-        android:id="@+id/mapListLabelMail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginRight="15dp"
-        android:text="@string/label_mail" />
-
-    <LinearLayout android:layout_gravity="fill_horizontal" >
-
-        <Button
-            android:id="@+id/mapListBtnMap"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.50"
-            android:text="@string/btn_map" />
-
-        <Button
-            android:id="@+id/mapListBtnCall"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.50"
-            android:text="@string/btn_call" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_marginLeft="10dp"
-        android:layout_row="7"
-        android:orientation="vertical" >
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/mapListStreet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_gravity="right|top"
-        android:layout_row="1"
-        android:text="@string/label_adress" />
-
-    <TextView
-        android:id="@+id/mapListPhone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_gravity="right|top"
-        android:layout_row="5" />
-
-    <TextView
-        android:id="@+id/mapListMail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_gravity="right|top"
-        android:layout_row="6" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/mapListCity"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_gravity="right|top"
-        android:layout_row="3"
-        android:text="@string/label_adress" />
+        android:layout_height="match_parent"
+        android:layout_alignBaseline="@+id/mapListTitle"
+        android:layout_alignBottom="@+id/mapListTitle"
+        android:layout_alignParentRight="true"
+        android:gravity="center_vertical"
+        android:text="@string/label_adress"
+        android:textColor="@color/darkGrey" />
 
-</GridLayout>
+</RelativeLayout>
