--- a/app/res/layout/activity_password_verify.xml
+++ b/app/res/layout/activity_password_verify.xml
@@ -9,9 +9,9 @@
         android:id="@+id/Aufforderung3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/PIN_verify"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"
+        android:layout_marginTop="50dp"
         android:text="@string/label_pin"
         android:textSize="40sp" />
 
@@ -19,12 +19,16 @@
         android:id="@+id/PIN_verify"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/Aufforderung3"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="30dp"
         android:ems="10"
         android:gravity="top|center_horizontal"
         android:inputType="numberPassword"
         android:maxLength="4"
-        android:textSize="60sp" />
+        android:textSize="60sp" >
+
+        <requestFocus />
+    </EditText>
 
 </RelativeLayout>
