--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -1,4 +1,6 @@
 <resources>
     <color name="grey">#D8D8D8</color>
     <color name="white">#FFFFFF</color>
+    <color name="darkGrey">#7A7A7A</color>
+    <color name="lightGreen">#7CFC00</color>
 </resources>
