--- a/app/res/layout/activity_emotion.xml
+++ b/app/res/layout/activity_emotion.xml
@@ -2,27 +2,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:onClick="startPlaylist"
     tools:context=".EmotionActivity" >
 
     <ListView
         android:id="@+id/distractionListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/MP3_button"
+        android:layout_height="200dp"
+        android:layout_above="@+id/textView1"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/spinnemotion"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
+        android:background="@color/white"
         android:clickable="false"
         android:gravity="center_horizontal" />
-
-    <Button
-        android:id="@+id/MP3_button"
-        android:layout_width="160dp"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="@string/MP3_button" />
 
     <TextView
         android:id="@+id/ermutigungs_text"
@@ -60,5 +53,27 @@
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/textViewEmotionLabel"
         android:gravity="right" />
+
+    <Button
+        android:id="@+id/button1"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:onClick="startPlaylist"
+        android:text="@string/MP3_button" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="20dp"
+        android:gravity="center_horizontal"
+        android:text="@string/lbl_music" />
 
 </RelativeLayout>
